# everweb_blockchain

./: Cargo.toml  README.md  polkadot_readme.txt  whitelist.json
Whitelist_tools/: basic_scrape.py  check_robots,.py  list_to_json.py  page_enumerator.py
docs/: wikipedia_subpages.txt
miner/: Cargo.toml
miner-submission-manager/: Cargo.toml
miner-submission-manager/src/: lib.rs  mock.rs  tests.rs
miner/src/: lib.rs  mock.rs  tests.rs
pallets/miner/: Cargo.toml
pallets/miner-submission-manager/: Cargo.toml
pallets/miner-submission-manager/src/: lib.rs  mock.rs  tests.rs
pallets/miner/src/: lib.rs  mock.rs  tests.rs
pallets/treasury/: Cargo.toml
pallets/treasury-manager/src/: lib.rs  mock.rs  tests.rs
pallets/validator/: Cargo.toml
pallets/validator-submission-manager/src/: lib.rs  tests.rs
pallets/validator/src/: lib.rs  mock.rs  tests.rs
pallets/verifier/: Cargo.toml
pallets/verifier-submission-manager/: Cargo.toml
pallets/verifier-submission-manager/src/: lib.rs  mock.rs  tests.rs
pallets/verifier/src/: lib.rs  mock.rs  (+2 more)
pallets/whitelist/: Cargo.toml
raw_scrapes/: en.wikipedia.org.html  www.data.gov.html
tools/Whitelist_tools/: diff_pages.py  proof_of_concept.py
tools/raw_scrapes/: www.bbc.com.html  www.si.edu.html  www.wikipedia.org.html
treasury-manager/: Cargo.toml
treasury-manager/src/: lib.rs
treasury/src/: lib.rs  mock.rs  tests.rs
validator-submission-manager/: Cargo.toml
validator-submission-manager/src/: lib.rs  mock.rs  tests.rs
validator/src/: lib.rs  tests.rs
whitelist/: Cargo.toml
whitelist/src/: lib.rs  tests.rs
(+1 files in other folders)
