[package]
name = "pallet-validator-submission-manager"
authors = ["Anonymous"]
description = "Frame Pallet"
version = "0.1.0"
license = "Unlicense"
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
frame-support = { version = "37.0.0", default-features = false }
frame-system = { version = "37.1.0", default-features = false }
frame-benchmarking = { version = "37.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
pallet-balances = { version = "38.0.0", default-features = false }
log = { version = "0.4.21", default-features = false }
pallet-treasury-manager = { version = "0.1.0", path = "../treasury-manager" }

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
    "frame-system/std",
	"frame-benchmarking/std",  # add this line for benchmarking support
	"scale-info/std",
	"sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
	"sp-std/std",
	"pallet-balances/std",
]

try-runtime = []


